@@ -11,6 +11,7 @@ Version 1.9.10+svn:
    * Fixed disappearing theme UI buttons after changing fullscreen/windowed mode
      or resolution in Preferences during a game
    * Fixed define handling of wmlxgettext (bug #18622)
+   * Changed: Try to recover from broken pango-markup.
 
 Version 1.9.10:
  * AI:
